k8s-cluster-configuration/applications/globchess/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: globchess-db
  namespace: globchess
spec:
  selector:
    app: globchess-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
