k8s-cluster-configuration/applications/globchess/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-app-only
  namespace: globchess
spec:
  podSelector:
    matchLabels:
      app: globchess-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: globchess
      ports:
        - port: 5432
